<resources>
    <string name="app_name">taskmaster</string>
    <string name="no_task_title">TASKS</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_task">ALL TASK</string>
    <string name="study">STUDY</string>
    <string name="clean">CLEAN</string>
    <string name="gym">GYM</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task Name</string>
</resources>